# dav-2.3.2

./: FinalOnlineRetail_EDA.ipynb  main.py  pyproject.toml
data/: customer_behavior_summary.csv  geographic_market_analysis.csv  return_prone_products.csv  top10_countries_by_revenue.csv  top10_products_enhanced_analysis.csv
