[project]
name = "dav-2-3-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]
